# fastapi-all-in-one

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 202310070131-c29f22e55660_.py  202310080009-863bf8f66115_.py  202310240119-0ea8d083d800_.py  202310240121-26f3f3105e26_.py  202311060031-61fd7ddbb63e_.py  202311191649-189247e8ff17_.py  202311191709-9cd79467a454_.py  202311191726-7a25e8ddd879_.py  202311192203-df3b29c30acc_.py  202311210031-b2971d89afb2_.py  202312010029-c1d1484bf6f3_.py  202401072240-66d56c113f0a_.py  202401100032-b45f9ba6a4b5_.py
app/: main.py
app/auth/: constants.py  deps.py  dto.py  endpoints.py  models.py  service.py
app/auth/templates/: oauth2-signin.html  oauth2flow.html
app/core/: config.py  constants.py  db.py  deps.py  email.py  errors.py  utils.py
app/core/oauth2/: apple.py  base.py  google.py  kakao.py
app/user/: constants.py  models.py
scripts/: install-git-hooks.sh
tests/: conftest.py
tests/auth/: test_deps.py  test_endpoints.py  test_model.py  test_services.py
tests/model/: test_user.py
tests/user/: test_model.py
